--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: run tests
       run: |
-        pytest --cov=sqla src/tests --cov-report=xml
+        pytest --cov=sqla_ext src/tests --cov-report=xml
 
     - name: upload coverage to codecov
       uses: codecov/codecov-action@v1
