--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,5 +31,5 @@ repos:
     rev: v0.790
     hooks:
     -   id: mypy
+        additional_dependencies: ['sqlalchemy-stubs']
         args: ["--config-file", "mypy.ini"]
-
