--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
+plugins=sqlmypy
 ignore_missing_imports = True
 strict_optional = True
 follow_imports = skip
@@ -9,4 +10,3 @@ no_implicit_reexport = True
 
 # Strict Mode:
 disallow_untyped_defs = True
-disallow_any_generics = True
