--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.6.4
+    rev: v5.8.0
     hooks:
     -   id: isort
         args: ['--multi-line=3', '--trailing-comma', '--force-grid-wrap=0', '--use-parentheses', '--line-width=88']
 
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.3.0
+    rev: v3.4.0
     hooks:
     - id: trailing-whitespace
     - id: check-added-large-files
@@ -28,8 +28,8 @@ repos:
       language_version: python3.7
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.790
+    rev: v0.812
     hooks:
     -   id: mypy
-        additional_dependencies: ['sqlalchemy-stubs']
+        additional_dependencies: ['sqlalchemy[mypy]']
         args: ["--config-file", "mypy.ini"]
