--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
-plugins=sqlmypy
+plugins=sqlalchemy.ext.mypy.plugin
+
 ignore_missing_imports = True
 strict_optional = True
 follow_imports = skip
